# m1necraft

./: .gitignore  Cargo.toml  README.md  appcast.xml  requirements.txt
.github/workflows/: build-release.yml  main.yml  release.yml  update_tag.yml
Formula/: m1necraft.rb
M1necraft/: AppCompat.swift  AppDelegate.swift  AppStoreButtonStyle.swift  AppUpdaterView.swift  CloseButton.swift  Constants.swift  ContentView.swift  ErrorView.swift  GameVersionListItem.swift  GameVersionListView.swift  Info.plist  InstallView.swift  LauncherView.swift  LoginView.swift  M1necraftApp.swift  Main.swift  ModInstallHelpView.swift  ObservingProgressIndicator.swift  SettingsView.swift  SetupView.swift  Utils.swift
M1necraft.backup1/M1necraft/: ContentView.swift  M1necraftApp.swift
M1necraft.backup1/M1necraft.xcodeproj/: project.pbxproj
M1necraft.backup1/M1necraft.xcodeproj/project.xcworkspace/xcuserdata/raphael.xcuserdatad/: UserInterfaceState.xcuserstate
M1necraft.backup1/M1necraft.xcodeproj/xcuserdata/raphael.xcuserdatad/xcschemes/: xcschememanagement.plist
M1necraft.backup1/M1necraftUITests/: M1necraftUITestsLaunchTests.swift
M1necraft.xcodeproj/: project.pbxproj
M1necraft.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
M1necraft.xcodeproj/project.xcworkspace/xcuserdata/raphael.xcuserdatad/: UserInterfaceState.xcuserstate
M1necraft/Assets.xcassets/AppIcon.appiconset/: Contents.json
M1necraft/Assets.xcassets/MinecraftIcon.imageset/: Contents.json
M1necraft/Modules/: Path.swift
M1necraft/en.lproj/: Localizable.strings
M1necraftTests/: M1necraftTests.swift
M1necraftUITests/: M1necraftUITests.swift
docs/: configuring-official-launcher-for-arm.md
installer/: install.sh
scripts/: build-and-run.sh  generate_appcast  increment_version  retag.sh  update_appcast  update_appcast.sh  update_tag.sh
src/: config.rs  launcher.rs  lib.rs  main.rs  mcl.rs  utils.rs
