[package]
name = "m1necraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cacao = "0.2.1"
reqwest = "0.11.6"
futures = "0.3.18"
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unzpack = "0.1"
dirs = "4.0"
once_cell = "1.8"
tempfile = "3.2.0"
