[package]
name = "m1necraft"
description = "Minecraft compiled for Apple Silicon."
version = "0.1.2"
authors = ["Raphael <raphpb1912@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "api"

[[bin]]
name = "m1necraft"
path = "src/bin/cli.rs"

[target.'cfg(target_os = "macos")'.dependencies]
cacao = "0.2.1"

[dependencies]
reqwest = { version = "0.11.6", features = ["blocking"] }
futures = "0.3.18"
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
fern = { version = "0.5", features = ["colored"] }
colored = "2"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unzpack = "0.1"
dirs = "4.0"
once_cell = "1.8"
tempfile = "3.2.0"
indoc = "1.0"
clap = { version = "3.0.1", features = ["derive"] }
fs_extra = "1.2.0"
glob = "0.3"
indicatif = "0.16.2"

[package.metadata.bundle.bin.gui]
name = "M1necraft"
identifier = "raphtlw.apps.M1necraft"
icon = ["res/icons/32x32.png",
        "res/icons/64x64.png",
        "res/icons/128x128.png",
        "res/icons/128x128@2x.png"]
copyright = "Copyright (c) 2021 Raphael Tang under the GNU GPLv3. All rights reserved."
category = "Game"
short_description = "Minecraft for Apple Silicon"
long_description = """
Enjoy Minecraft to it's fullest.
M1necraft gives you an easy way to run Minecraft directly compiled and optimized for Apple Silicon chips.
"""
